--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-priority-queue": "^0.1.1",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
