--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "immutable": "^4.0.0-rc.12",
+    "material-design-icons": "^3.0.1",
     "node-sass": "^6.0.0",
     "poisson-process": "^1.0.0",
     "react": "^17.0.2",
