Resaerch Tree cleanup
Now shows prereqs in green.
Can only select unlocked research.
Shows unmet reqs

Filter research that definitely will be cut.
No weapons/armor for one. Probably no space science.
Add button to set current research.

--- a/package.json
+++ b/package.json
@@ -29,20 +29,14 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "gen": "go run ./src/scripts/genEntities.go src/gen/entities.ts"
+    "gen": "go run ./src/scripts/genEntities.go src/gen/entities.ts",
+    "researchTiers": "ts-node ./src/scripts/genResearchTiers.ts"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
