--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "downlevelIteration": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve"
   },
   "include": [
     "src"
