--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "material-design-icons": "^3.0.1",
     "poisson-process": "^1.0.0",
     "react-scripts": "^5.0.1",
-    "saas": "^1.0.0",
     "sass": "^1.50.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -34,17 +33,10 @@
     "check-types": "npx tsc --noEmit"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
