--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immutable": "^4.0.0-rc.12",
     "material-design-icons": "^3.0.1",
     "poisson-process": "^1.0.0",
+    "react-error-boundary": "^3.1.4",
     "react-keybind": "^0.9.4",
     "react-scripts": "^5.0.1",
     "sass": "^1.50.1",
