--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-keybind": "^0.9.4",
     "react-scripts": "^5.0.1",
     "sass": "^1.50.1",
-    "typescript": "^4.4.2",
+    "typescript": "^4.7.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -35,17 +35,10 @@
     "check-types": "npx tsc --noEmit"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
