--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "immutable": "^4.0.0-rc.12",
+    "lz-string": "^1.4.4",
     "material-design-icons": "^3.0.1",
     "poisson-process": "^1.0.0",
     "react-error-boundary": "^3.1.4",
@@ -35,10 +36,17 @@
     "check-types": "npx tsc --noEmit"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -46,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lz-string": "^1.3.34",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "gh-pages": "^3.2.3",
     "prettier": "^2.3.1"
