--- a/package.json
+++ b/package.json
@@ -35,10 +35,17 @@
     "check-types": "npx tsc --noEmit"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -47,7 +54,10 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "autoprefixer": "^10.4.7",
     "gh-pages": "^3.2.3",
-    "prettier": "^2.3.1"
+    "postcss": "^8.4.14",
+    "prettier": "^2.3.1",
+    "tailwindcss": "^3.1.6"
   }
 }
