--- a/package.json
+++ b/package.json
@@ -31,22 +31,16 @@
     "deploy": "gh-pages -d build",
     "gen": "go run ./src/scripts/genEntities.go src/gen/entities.ts",
     "researchTiers": "ts-node ./src/scripts/genResearchTiers.ts",
+    "fromSat": "ts-node ./src/scripts/from_satisfactory.ts",
     "lint": "npx eslint --fix src/**/*.ts src/**/*.tsx",
     "check-lint": "npx eslint src/**/*.ts src/**/*.tsx",
     "check-types": "npx tsc --noEmit"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -60,6 +54,7 @@
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.14",
     "prettier": "^2.3.1",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.6",
+    "ts-node": "^10.9.1"
   }
 }
