--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "homepage": "https://compnski.github.io/factorymustgrow/",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.27",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
-    "immutable": "^4.0.0-rc.12",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "immutable": "^4.2.2",
     "lz-string": "^1.4.4",
     "material-design-icons": "^3.0.1",
-    "poisson-process": "^1.0.0",
+    "poisson-process": "^1.0.1",
     "react-error-boundary": "^3.1.4",
     "react-keybind": "^0.9.4",
     "react-scripts": "^5.0.1",
-    "sass": "^1.50.1",
-    "typescript": "^4.7.0",
-    "web-vitals": "^2.1.0"
+    "sass": "^1.57.1",
+    "typescript": "^4.9.4",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,12 +49,12 @@
   },
   "devDependencies": {
     "@types/lz-string": "^1.3.34",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "autoprefixer": "^10.4.7",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "autoprefixer": "^10.4.13",
     "gh-pages": "^3.2.3",
-    "postcss": "^8.4.14",
-    "prettier": "^2.3.1",
-    "tailwindcss": "^3.1.6",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1"
   }
 }
