--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "poisson-process": "^1.0.1",
     "react-error-boundary": "^3.1.4",
     "react-keybind": "^0.9.4",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
@@ -37,10 +38,17 @@
     "check-types": "npx tsc --noEmit"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
