--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cd worker && npm exec wrangler dev",
+    "publish": "cd worker && npm exec wrangler publish"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.10.0",
-    "wrangler": "^2.0.3"
+    "@cloudflare/workers-types": "4.20230215.0",
+    "wrangler": "2.10.0"
   },
   "dependencies": {
-    "typescript": "^4.6.4"
+    "typescript": "4.9.5"
   }
 }
