--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@cloudflare/workers-types": "4.20230215.0",
-    "wrangler": "2.10.0"
+    "wrangler": "^2.12.0"
   },
   "dependencies": {
     "joi": "^17.8.3",
