--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/lz-string": "^1.3.34",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.8.0",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
